<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_account_set"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:id="@+id/set_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_change_pwd"
        android:textSize="20sp"
        android:paddingLeft="40dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/black"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/set_gesture"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/set_gesture"
            android:textSize="20sp"
            android:paddingLeft="40dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            />
        <Switch
            android:id="@+id/set_gesture_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray" />
</LinearLayout>