<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_ffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_centerInParent="true"
        android:id="@+id/register_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:src="@drawable/phone_707070" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="+86" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/gap_view_color"
                    android:paddingRight="10dp" />

                <EditText
                    android:id="@+id/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="请输入手机号"
                    android:paddingLeft="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:id="@+id/H_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gap_view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:src="@drawable/keyboard_707070" />

                <EditText
                    android:id="@+id/register_smscode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="请输入验证码"
                    android:paddingLeft="10dp"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/register_getcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/message_send_button"
                    android:padding="2dp"
                    android:text="@string/register_getCode"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:id="@+id/H_line_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gap_view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:src="@drawable/key_707070" />

                <com.tinymonster.strangerdiary.ui.widget.NoEmojEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/register_input_psw"
                    android:paddingLeft="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:id="@+id/H_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gap_view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:src="@drawable/key_707070" />

                <com.tinymonster.strangerdiary.ui.widget.NoEmojEditText
                    android:id="@+id/register_verify_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:hint="@string/register_psw_hint"
                    android:paddingLeft="10dp"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_input"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/text_bg"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>
